--- a/index.html
+++ b/index.html
@@ -1,62 +1,66 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VINN CRASHER🔥</title>
+  <title>🔥 VINN CRASHER</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+
     body {
-      font-family: 'Courier New', monospace;
-      background: radial-gradient(circle at top, #2b1907, #4b2e0e, #1a0e02);
+      font-family: 'Orbitron', sans-serif;
+      background: radial-gradient(circle at center, #120000, #1a0000, #000);
       margin: 0;
       padding: 0;
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff8dc;
+      color: #ffcccc;
       text-align: center;
+      overflow: hidden;
     }
 
     .container {
       max-width: 500px;
       width: 90%;
-      background: rgba(0, 0, 0, 0.3);
+      background: rgba(50, 0, 0, 0.2);
       padding: 30px 20px;
-      border-radius: 20px;
-      box-shadow: 0 0 25px gold;
-      border: 1px solid gold;
-      backdrop-filter: blur(10px);
+      border-radius: 18px;
+      box-shadow: 0 0 30px red;
+      border: 1px solid crimson;
+      backdrop-filter: blur(8px);
     }
 
     .logo {
-      width: 100px;
-      height: 100px;
-      margin-bottom: 10px;
+      width: 90px;
+      height: 90px;
+      margin-bottom: 15px;
       border-radius: 50%;
-      border: 2px solid gold;
-      box-shadow: 0 0 15px gold;
+      border: 2px solid crimson;
+      box-shadow: 0 0 20px crimson;
       object-fit: cover;
     }
 
     h1 {
-      font-size: 2rem;
-      margin: 10px 0 20px;
-      color: gold;
-      text-shadow: 0 0 10px gold;
+      font-size: 2.2rem;
+      color: #ff3c3c;
+      text-shadow: 0 0 8px #ff4d4d, 0 0 20px red;
+      margin: 10px 0 15px;
     }
 
     .developer-name {
-      font-size: 1rem;
-      color: #ffeaa7;
-      margin-bottom: 20px;
+      font-size: 0.95rem;
+      color: #ffaaaa;
+      margin-bottom: 25px;
+      text-shadow: 0 0 5px #ff8888;
     }
 
     input {
-      background-color: #111;
-      color: gold;
-      border: 1px solid gold;
+      background-color: #1a0000;
+      color: #ff6666;
+      border: 1px solid #ff4d4d;
       padding: 12px;
       width: 80%;
       max-width: 300px;
@@ -64,32 +68,32 @@
       outline: none;
       text-align: center;
       margin-bottom: 20px;
+      box-shadow: 0 0 10px #ff1a1a;
     }
 
     .crash-buttons {
       display: flex;
       flex-direction: column;
       gap: 15px;
-      margin-bottom: 20px;
     }
 
     .crash-buttons button {
-      text-decoration: none;
-      background: linear-gradient(90deg, #ffce00, #ffb700);
-      color: #000;
+      background: linear-gradient(90deg, #ff1a1a, #cc0000);
+      color: #fff;
       padding: 14px;
-      border-radius: 12px;
+      border-radius: 10px;
       font-weight: bold;
-      box-shadow: 0 0 10px #ffd700;
+      font-size: 1rem;
       border: none;
       cursor: pointer;
+      box-shadow: 0 0 10px #ff1a1a;
       transition: 0.3s;
     }
 
     .crash-buttons button:hover {
-      background: gold;
-      transform: translateY(-2px);
-      box-shadow: 0 0 20px gold, 0 0 40px gold;
+      background: #ff4d4d;
+      transform: scale(1.05);
+      box-shadow: 0 0 25px #ff1a1a, 0 0 40px #ff1a1a;
     }
 
     .music-btn {
@@ -97,39 +101,40 @@
       top: 20px;
       right: 20px;
       padding: 10px 14px;
-      border-radius: 12px;
-      background: gold;
-      color: #000;
+      border-radius: 10px;
+      background: crimson;
+      color: #fff;
       font-weight: bold;
       border: none;
-      box-shadow: 0 0 10px gold;
+      box-shadow: 0 0 15px crimson;
       cursor: pointer;
       transition: 0.3s;
     }
 
     .music-btn:hover {
-      background: #ffd700;
-      box-shadow: 0 0 20px gold;
+      background: #ff4d4d;
+      box-shadow: 0 0 25px red;
     }
 
     .info-text {
-      margin-top: 15px;
+      margin-top: 18px;
       font-size: 14px;
-      text-shadow: 0 0 10px gold;
+      color: #ff9999;
+      text-shadow: 0 0 5px red;
     }
   </style>
 </head>
 <body>
-  <!-- Tombol Play Musik -->
+  <!-- Tombol Musik -->
   <button class="music-btn" onclick="playMusic()">🔊 Musik</button>
   <audio id="bgMusic" src="musik.mp3" loop></audio>
 
   <div class="container">
     <img src="-media-/logo.png" alt="Logo" class="logo" />
-    <h1>VINN CRASHER</h1>
-    <div class="developer-name">BY VINN STORE</div>
+    <h1>🔥 VINN CRASHER</h1>
+    <div class="developer-name">POWERED BY VINN STORE</div>
 
-    <p>Masukkan Nomor Target di Bawah:</p>
+    <p>Masukkan Nomor Target:</p>
     <input id="target" placeholder="08xxxx / 62xxxx" />
 
     <div class="crash-buttons">
@@ -158,7 +163,7 @@
 
       infoBox.innerHTML = "🚀 Mengirim " + type + " ke " + target + "...";
       setTimeout(() => {
-        infoBox.innerHTML = "✅ <span style='color: #00ff00;'>Berhasil dikirim ke " + target + "</span>";
+        infoBox.innerHTML = "✅ <span style='color: #00ff00;'>Sukses dikirim ke " + target + "</span>";
       }, 2000);
     }
   </script>
