--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <audio id="bgMusic" src="musik.mp3" loop></audio>
 
   <div class="container">
-    <img src="-media-/logo.png" alt="Logo" class="logo" />
+    <img src="logo.png" alt="Logo" class="logo" />
     <h1>🔥 VINN CRASHER WHATSAPP</h1>
     <div class="developer-name">POWERED BY VINN STORE</div>
 
