--- a/index.html
+++ b/index.html
@@ -2,105 +2,95 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Darkness API Bug</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <title>Vinn Attack Menu</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: 'Orbitron', sans-serif;
-      box-sizing: border-box;
-    }
     body {
-      background: #000;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-image: url('https://www.transparenttextures.com/patterns/stardust.png');
-      overflow: hidden;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: radial-gradient(circle at center, #0f0f0f, #000);
+      color: white;
     }
-    .login-box, .attack-box {
-      background: rgba(20, 20, 20, 0.9);
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 0 20px #0ff;
+    .container {
+      max-width: 400px;
+      margin: 60px auto;
+      padding: 20px;
+    }
+    .card {
+      background: #1b1b1b;
+      border-radius: 20px;
+      padding: 20px;
+      margin-bottom: 30px;
+      box-shadow: 0 0 15px #00f7ff44;
+    }
+    .card h2 {
       text-align: center;
-    }
-    h1 {
-      font-size: 24px;
       margin-bottom: 20px;
-      color: #0ff;
-      text-shadow: 0 0 10px #0ff;
+      color: #00f7ff;
+      text-shadow: 0 0 10px #00f7ff;
+    }
+    .button {
+      background: linear-gradient(90deg, #00f7ff, #7a00ff);
+      padding: 12px;
+      border: none;
+      width: 100%;
+      color: white;
+      border-radius: 30px;
+      font-weight: bold;
+      font-size: 16px;
+      cursor: pointer;
+      box-shadow: 0 0 10px #00f7ff;
     }
     input {
-      padding: 10px;
-      margin: 10px 0;
-      width: 80%;
-      border: none;
-      border-radius: 8px;
-      background: #111;
-      color: #0ff;
-      outline: none;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 30px;
-      background: linear-gradient(45deg, #0ff, #a0f);
-      border: none;
+      width: 100%;
+      padding: 12px;
       border-radius: 10px;
-      color: #fff;
+      border: none;
+      margin-bottom: 15px;
+      background: #2a2a2a;
+      color: white;
+      font-size: 14px;
+    }
+    .hidden { display: none; }
+    .loading {
+      text-align: center;
+      color: #00ff88;
       font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 0 10px #0ff;
-    }
-    .menu-btns button {
-      display: block;
-      margin: 10px auto;
-      width: 80%;
-    }
-    #buyText {
-      margin-top: 20px;
-      color: #ccc;
-      font-size: 12px;
     }
   </style>
 </head>
 <body>
-  <div class="login-box" id="loginBox">
-    <h1>Darkness Api Bug</h1>
-    <p>Login</p>
-    <input type="text" id="username" placeholder="Username" />
-    <input type="password" id="password" placeholder="Password" />
-    <br />
-    <button onclick="login()">🔐 Login</button>
-    <div id="buyText">Buy Akses Chat: <span style="color:#0ff">@kontak_admin</span></div>
-  </div>  <div class="attack-box" id="attackBox" style="display: none;">
-    <h1>⚡ Attack Menu ⚡</h1>
-    <div class="menu-btns">
-      <button>💥 Crash Android</button>
-      <button>📱 Crash iPhone</button>
-      <button>🧨 Crash UI</button>
-      <button>🔥 Spam Emoji</button>
-      <button>❄️ Freeze Chat</button>
-      <button onclick="logout()">🔙 Back</button>
+  <div class="container" id="menuPage">
+    <div class="card">
+      <h2>Crash Android</h2>
+      <button class="button" onclick="openAttack('Crash Android')">Masuk ke Eksekusi</button>
+    </div>
+    <div class="card">
+      <h2>Crash Invisible iPhone</h2>
+      <button class="button" onclick="openAttack('Crash iPhone')">Masuk ke Eksekusi</button>
+    </div>
+    <div class="card">
+      <h2>One Message Beta Crash</h2>
+      <button class="button" onclick="openAttack('One Message Crash')">Masuk ke Eksekusi</button>
+    </div>
+  </div>  <div class="container hidden" id="attackPage">
+    <div class="card">
+      <h2 id="attackTitle">Attack</h2>
+      <input type="text" id="targetInput" placeholder="Masukkan No Target" />
+      <button class="button" onclick="executeAttack()">Kirim</button>
+      <div id="loading" class="loading hidden">Mengirim bug ke target...</div>
     </div>
   </div>  <script>
-    function login() {
-      const user = document.getElementById('username').value;
-      const pass = document.getElementById('password').value;
-      if (user && pass) {
-        document.getElementById('loginBox').style.display = 'none';
-        document.getElementById('attackBox').style.display = 'block';
-      } else {
-        alert('Username dan password wajib diisi.');
-      }
+    function openAttack(name) {
+      document.getElementById('menuPage').classList.add('hidden');
+      document.getElementById('attackPage').classList.remove('hidden');
+      document.getElementById('attackTitle').innerText = name;
     }
 
-    function logout() {
-      document.getElementById('attackBox').style.display = 'none';
-      document.getElementById('loginBox').style.display = 'block';
+    function executeAttack() {
+      document.getElementById('loading').classList.remove('hidden');
+      setTimeout(() => {
+        document.getElementById('loading').innerText = 'Bug berhasil dikirim ✅';
+      }, 2000);
     }
   </script></body>
 </html>
